<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.once.SplashScreenFragment">

    <ImageView
        android:id="@+id/kjcLogo"
        android:layout_width="314dp"
        android:layout_height="335dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.35000002"
        app:srcCompat="@drawable/cropped_kjc_logo" />

    <TextView
        android:id="@+id/welcome1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/welcome_to"
        android:textColor="@color/black"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/kjcLogo"
        app:layout_constraintStart_toStartOf="@+id/kjcLogo"
        app:layout_constraintTop_toBottomOf="@+id/kjcLogo" />

    <TextView
        android:id="@+id/welcome2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/component_management_system"
        android:textAlignment="center"
        android:textColor="#ffb300"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/welcome1"
        app:layout_constraintStart_toStartOf="@+id/welcome1"
        app:layout_constraintTop_toBottomOf="@+id/welcome1" />

    <Button
        android:id="@+id/googleLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/googleColor"
        android:drawableStart="@drawable/ic_google"
        android:fontFamily="@font/roboto_regular"
        android:foregroundTint="@color/white"
        android:padding="12sp"
        android:paddingStart="15sp"
        android:text="@string/sign_in_with_google"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@+id/welcome2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/welcome2"
        app:layout_constraintTop_toBottomOf="@+id/welcome2" />

</androidx.constraintlayout.widget.ConstraintLayout>